Fixed header misalignment

--- a/src/routes/MembershipCardPage/MembershipCardPage.module.scss
+++ b/src/routes/MembershipCardPage/MembershipCardPage.module.scss
@@ -3,6 +3,8 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row-reverse;
+    align-items: center;
+    margin-bottom: 10px;
   }
 
   &__left-arrow {
